Update bibliography and upgrade requests dependency

--- a/main.bib
+++ b/main.bib
@@ -554,3 +554,14 @@ pages = {1756--1760},
 title = {{Cross-entropy vs. Squared error training: A theoretical and experimental comparison}},
 year = {2013}
 }
+@book{Newman1992,
+address = {London},
+doi = {10.1007/978-1-349-11721-5},
+editor = {Newman, Peter and Milgate, Murray and Eatwell, John},
+isbn = {978-1-349-11723-9},
+mendeley-groups = {CIMAT/Thesis},
+publisher = {Palgrave Macmillan UK},
+title = {{The New Palgrave Dictionary of Money {\&} Finance}},
+url = {http://link.springer.com/10.1007/978-1-349-11721-5},
+year = {1992}
+}
